--- a/module/Lienhe/view/lienhe/lienhe/index.phtml
+++ b/module/Lienhe/view/lienhe/lienhe/index.phtml
@@ -112,7 +112,7 @@
                         		</p>
                         	</div>
                         	<div class="span5">
-                        	    <div class="add-googlemap" data-height="205" data-addr="Prešernov Trg, Ljubljana" data-title="Webmarket Business" data-zoom="14" data-type="roadmap"></div>
+                        	    <div class="add-googlemap" data-height="205" data-addr="200 1/2 university Ave Lowell, MA 01854 " data-title="Gankming" data-zoom="14" data-type="roadmap"></div>
                         	</div>
                         </div>
     
