--- a/module/Sanpham/view/sanpham/sanpham/detail.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/detail.phtml
@@ -87,7 +87,7 @@
                         <!--  ==========  -->
                         <!--  = Add to cart form =  -->
                         <!--  ==========  -->
-                        <form action="<?php echo $this->url('giohang',array('action'=>'mua','id'=>$results->id,'sl'=>'1','dg'=>$results->price))?>" class="form form-inline clearfix" method="get">
+                        <form action="<?php echo $this->url('giohang',array('action'=>'mua','id'=>$result->id,'sl'=>'1','dg'=>$result->price))?>" class="form form-inline clearfix" method="get">
                             <!-- <div class="numbered">
                             	<input type="text" name="num" value="1" class="tiny-size"/>
                             	<span class="clickable add-one icon-plus-sign-alt"></span>
