--- a/module/Sanpham/view/sanpham/sanpham/edit.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/edit.phtml
@@ -503,7 +503,7 @@ $(document).on("click", ".icon-remove", function(){
                         </div>
                         
 						<div class="footer tar">
-                               <input type="submit" value="Thêm sản phẩm " class="btn"/><button class="btn"> </button>
+                               <input type="submit" value="Thêm sản phẩm " class="btn"/>
 						</div>	
                         
                     </div>
