--- a/module/Sanpham/view/sanpham/sanpham/detail.phtml
+++ b/module/Sanpham/view/sanpham/sanpham/detail.phtml
@@ -7,19 +7,11 @@
         		<div class="span12">
         		    <ul class="breadcrumb">
 	                    <li>
-	                        <a href="index-2.html">Webmarket</a>
+	                        <a href="">Home</a>
 	                    </li>
 	                    <li><span class="icon-chevron-right"></span></li>
 	                    <li>
-	                        <a href="shop.html">Shop</a>
-	                    </li>
-	                    <li><span class="icon-chevron-right"></span></li>
-	                    <li>
-	                        <a href="#">Horsefeathers</a>
-	                    </li>
-	                    <li><span class="icon-chevron-right"></span></li>
-	                    <li>
-	                        <a href="product.html">Horsefeathers Shot Surfers T-shirt</a>
+	                        <a href="">Shop</a>
 	                    </li>
 	                </ul>
         		</div>
@@ -72,7 +64,7 @@
                     <div class="product-title">
                         <h1 class="name"><span class="light"><?php echo $result->proname ?></span> </h1>
                         <div class="meta">
-                            <span class="tag"><?php echo number_format($result->price) ?> đ</span>
+                            <span class="tag">$<?php echo number_format($result->price) ?></span>
                             <span class="stock">
                                 <span class="btn btn-success">In Stock</span>
                                 <span class="btn btn-danger">Out of Stock</span>
