--- a/module/Tintuc/view/tintuc/tintuc/include/sidebar.phtml
+++ b/module/Tintuc/view/tintuc/tintuc/include/sidebar.phtml
@@ -45,7 +45,7 @@
                             <h3><span class="light">Twitter</span> Feed</h3>
                         </div>
                         
-                        <a class="twitter-timeline" href="https://twitter.com/primozcigler" data-widget-id="361435057526800385">Tweets by @primozcigler</a>
+                        <a class="twitter-timeline" href="https://twitter.com/GankGamingTV" data-widget-id="GankGamingTV">Tweets by @primozcigler</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
                     </div>
